--- a/BoardGamesFinalProject.qmd
+++ b/BoardGamesFinalProject.qmd
@@ -330,6 +330,6 @@ Based on these observations, it is concluded that `playing_time` has the greates
 However, it is important to remember that since correlation does not equal causation, having a longer `playing_time` would not necessarily make the `average_rating` happen. But if there is causation, this relationship may be explained by longer games being more memorable and having more quality playable content than shorter ones. 
 
 # Conclusion
-Overall, we found that after the 1960's games that are part of the American Civil War are often in the top five. In fact, the board games that have been rated highly since the 1960s seem to be either war-related games or related to a cultural trend. One example is in the 1980's the second highest-rated category is space exploration with fits with the trend of science fiction that was emerging due to the moon landing 5 years prior. In the 1970s the best-rated games were those related to the Vietnam War this could be related to how during the early 70s many Americans were beginning to hate being a part of the Vietnam War and these board games could be anti-Vietnam War related which would have connected to Americans. Also since the war ends in 1975 it means that it is still part of the mainstream giving people all sorts of stories and lessons to make board games from. 
-Also, we found that the games with longer play times have more correlation with the average rating of a game. This could be that since people are playing the game long they are able to get a better experience with their friends and family leading to overall high ratings as when they think back they can think of many moments. Longer board games also have the ability to be more complex as they have more time to implement more mechanics for people to experiment with. With more complexity it also leads to more replayability as each time someone plays the game they can do it differently. Replayability typically means that people can play it more times in one sitting without switching to another game. These are some reasons on why we think that there is a positive correlation between play time and average rating. 
+Overall, we found that after the 1960's games that are part of the American Civil War are often in the top five. In fact, the board games that have been rated highly since the 1960s seem to be either war-related games or related to a cultural trend. One example is in the 1980's the second highest-rated category is space exploration with fits with the trend of science fiction that was emerging due to the moon landing 5 years prior. In the 1970s the best-rated games were those related to the Vietnam War this could be related to how during the early 70s many Americans were beginning to hate being a part of the Vietnam War and these board games could be anti-Vietnam War related which would have connected to Americans. Also since the war ended in 1975 it means that it is still part of the mainstream giving people all sorts of stories and lessons to make board games from. 
+Also, we found that games with longer playing times have a greater correlation with the average rating of a game. This could be because people are playing the game for a longer period of time they can get a better experience with their friends and family leading to overall high ratings as when they think back they can think of many moments. Longer board games also have the ability to be more complex as they have more time to implement more mechanics for people to experiment with. With more complexity it also leads to more replayability as each time someone plays the game they can do it differently. Replayability typically means that people can play it more times in one sitting without switching to another game. These are some reasons on why we think that there is a positive correlation between play time and average rating. 
 The board game industry has expanded since the 1960s with 2010 having so many different categories of board games people are sure to find a game to suit them.
